--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
         </form>
         </div>
     </body>
-    <script src="glitch2.js"></script>
+    <script src="done.js"></script>
 </html>
